# ds105a-project-music-metrics

./: .gitignore  README.md  _config.yml  branch_instructions.txt  excel_songs_ruikai.csv  list_of_functions_ruikai.ipynb  music_videos_testdata.csv  requirements.txt
data/: 10_songs_with_lyrics.csv  10_songs_with_lyrics.json  actual_youtube_data_50.csv  cleaned_youtube_final_data.csv  final_youtube.csv  merged.csv  merged.json  merged_new.csv  mv_stats_data.csv  mv_stats_data.json  raw_youtube_comments_data.csv  raw_youtube_final_data.csv  raw_youtube_search_data.csv  raw_youtube_stats_data.csv  scraped_youtube_data_50_with_genius.csv  search.csv  search_data.csv  search_data.json  test_10_songs.csv  test_num.csv  youtube_data.csv  yt_search_data.json
dees_package/: data_expansion_functions.py  genius_functions.py  spotify_functions.py  youtube_functions.py
dees_tools/: custom_functions.py  pyproject.toml
dees_tools/deestools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.md
functions/: data_expansion_functions.py  genius_functions.py  spotify_functions.py  youtube_functions.py
myenv/: pyvenv.cfg
notebooks/: .cache  01 YouTube Scraper.ipynb  02 Genius Scraper.ipynb  03 Spotify Scraper.ipynb  03 Spotify Token Generator.ipynb  04 Data Expansion.ipynb  04 Visualisation Preparation.ipynb  05 Visualisation.qmd  copy_ruikai_2024.ipynb  data_visualisation.ipynb  final_youtube.ipynb  final_youtube_wip.ipynb  genius_scraper.ipynb  lyricgenius.ipynb  music_videos_testdata.csv  ruikai_2024.ipynb  ruikai_2024_edited_ruijie.ipynb  sandbox.ipynb  test.r  (+6 more)
(+6 files in other folders)
