[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deestools"
version = "0.0.1"
authors = [
  { name="Rui Jie Soong", email="r.j.soong@lse.ac.uk" },
  { name="Hanbin Feng", email="xyz@lse.ac.uk" },
  { name="Ruikai Liu", email="xyz@lse.ac.uk" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4", 
  "pandas>=2.0.0",
  "selenium", 
  "ipython",
]

[project.urls]
Homepage = "https://github.com/lse-ds105/w10-data-reshaping-tricks"
Issues = "https://github.com/lse-ds105/w10-data-reshaping-tricks/issues"